Complete index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <div id="header">
-        <img src="img/logo.jpg" alt="logo" width="70" height="70">
+        <div>
+            <img src="img/logo.jpg" alt="logo" width="70" height="70">
+            <p></p>
+        </div>
         <div id="navigation">
             <a>Link 1</a>
             <a>Link 2</a>
@@ -30,22 +33,22 @@
         <div class="abilities">
             <div class="ability">
                 <img src="img/out_of_treats.png"  width="150" height="150">
-                <b>Out of treats</b>
+                <h3>Out of treats</h3>
                 <p>A special ability that allows her to steal all treats from her opponent</p>
             </div>
             <div class="ability">
                 <img src="img/mouse_transformation.jpg" width="150" height="150">
-                <b>Mouse transformation</b>
+                <h3>Mouse transformation</h3>
                 <p>Allows her to squeeze into any nook and cranny</p>
             </div>
             <div class="ability">
                 <img src="img/flawless_jump.jpg" width="150" height="150">
-                <b>Flawless jump</b>
+                <h3>Flawless jump</h3>
                 <p>Allows her to jump ANYWHERE.</p>
             </div>
             <div class="ability">
                 <img src="img/sugar_queen.jpg" width="150" height="150">
-                <b>Sugar Queen</b>
+                <h3>Sugar Queen</h3>
                 <p>Thanks to the sweetness of her appearance, all hot drinks need -1 teaspoon of sugar</p>
             </div>
         </div>
@@ -54,31 +57,31 @@
         <h2>Lala's special abilities:</h2>
         <div class="abilities">
             <div class="ability">
-                <img>
-                <b>All in charisma</b>
+                <img src="img/all_in_charisma.png" width="150" height="150">
+                <h3>All in charisma</h3>
                 <p>It can demand a second portion of wet food... "GIVE IT!"</p>
             </div>
             <div class="ability">
-                <img>
-                <b>The alarm function</b>
+                <img src="img/the_alarm_function.jpg" width="150" height="150">
+                <h3>The alarm function</h3>
                 <p>It can wake you up for work, a meeting... and any other random moment</p>
             </div>
             <div class="ability">
-                <img>
-                <b>A mighty build</b>
-                <p>Thanks to the increased weight (it's all muscle!!!), it has an advantage over opponents</p>
+                <img src="img/a_mighty_build.jpg" width="150" height="150">
+                <h3>A mighty build</h3>
+                <p>Thanks to the increased weight (<strong>it's all muscle!!!</strong>), it has an advantage over opponents</p>
             </div>
             <div class="ability">
                 <img src="img/sharp_claws.png" width="150" height="150">
-                <b>Sharp claws</b>
-                <p>scratch scratch... scratch</p>
+                <h3>Sharp claws</h3>
+                <p>*<i>scratch</i>*, *<i>scratch</i>*... *<i>scratch</i>*</p>
             </div>
         </div>
     </div>
     <div>
         <div>
-            <p>A hungry kitty is a bad kitty.</p>
-            <p>-Pearl (every half hour)</p>
+            <em>Every moment is a good moment for a treat.</em>
+            <p>-Pearl (<b>every</b> half hour)</p>
         </div>
     </div>
     <div>
@@ -87,6 +90,6 @@
             <button>Send food ➔ ➔ 🐈</button>
         </div>
     </div>
-    <div id="footer">Give your kitty... or your doggy a nice scratch.</div>
+    <div id="footer">Give your kitty or your doggy a <strong>nice scratch</strong>.</div>
 </body>
 </html>
