Add few line of CSS

--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
 </head>
 <body>
     <div id="header">
-        <div>
-            <img src="img/logo.jpg" alt="logo" width="70" height="70">
-            <p></p>
+        <div id="logo">
+            <img src="img/logo.jpg" alt="logo" width="40" height="40">
+            <p>My cats</p>
         </div>
         <div id="navigation">
             <a>Link 1</a>
+            |
             <a>Link 2</a>
+            |
             <a>Link 3</a>
         </div>
     </div>
-    <div>
-        <div>
+    <div id="second_section">
+        <div class="content">
             <h1>Perła and Lala</h1>
-            <p>You can support my always hungry cats right now</p>
-            <button>Send ➔</button>
+            <p>My cats are always hungry. You can already give them some food right now. <br> Especially treats... <br>lots of treats...</p>
+            <button>Send food ➔</button>
         </div>
-        <div>
+        <div class="images">
             <img src="img/perla.jpg" alt="perla" width="100" height="100">
             <img src="img/lala.jpg" alt="lala" width="100" height="100">
         </div>
     </div>
-    <div id="about_perla">
+    <div class="about_cat">
         <h2>Perła's special abilities:</h2>
         <div class="abilities">
             <div class="ability">
@@ -53,7 +55,8 @@
             </div>
         </div>
     </div>
-    <div id="about_lala">
+    <hr>
+    <div class="about_cat">
         <h2>Lala's special abilities:</h2>
         <div class="abilities">
             <div class="ability">
@@ -90,6 +93,6 @@
             <button>Send food ➔ ➔ 🐈</button>
         </div>
     </div>
-    <div id="footer">Give your kitty or your doggy a <strong>nice scratch</strong>.</div>
+    <div id="footer">Give your kitty or your doggy a nice scratch.</div>
 </body>
 </html>
