--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <div id="header">
         <div id="logo">
-            <img src="img/logo.jpg" alt="logo" width="40" height="40">
+            <img src="img/logo.png" alt="logo" width="60" height="60">
             <p>My cats</p>
         </div>
         <div id="navigation">
-            <a>Link 1</a>
+            <a href>Link</a>
             |
-            <a>Link 2</a>
+            <a href>Link also</a>
             |
-            <a>Link 3</a>
+            <a href>Hmm... link?</a>
         </div>
     </div>
     <div id="second_section">
@@ -26,8 +26,8 @@
             <button>Send food ➔</button>
         </div>
         <div class="images">
-            <img src="img/perla.jpg" alt="perla" width="100" height="100">
-            <img src="img/lala.jpg" alt="lala" width="100" height="100">
+            <img src="img/perla.jpg" alt="perla" width="250" height="250">
+            <img src="img/lala.jpg" alt="lala" width="250" height="250">
         </div>
     </div>
     <div class="about_cat">
@@ -81,15 +81,18 @@
             </div>
         </div>
     </div>
-    <div>
-        <div>
+    <div id="third_section">
+        <div id="quote">
             <em>Every moment is a good moment for a treat.</em>
-            <p>-Pearl (<b>every</b> half hour)</p>
+            <p>-Perła, <strong>every</strong> half hour</p>
         </div>
     </div>
-    <div>
-        <div>
-            <p>It's not too late to give something to eat!</p>
+    <div id="fourth_section">
+        <div class="give_food_panel">
+            <div>
+                <b>This is your time!</b>
+                <p>It's not too late to give something to eat!</p>
+            </div>
             <button>Send food ➔ ➔ 🐈</button>
         </div>
     </div>
